# edge-policy-hub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/tauri-ui/: .env.example  .gitignore  README.md  index.html  package.json  vite.config.ts
apps/tauri-ui/src/: App.css  App.tsx  main.tsx
apps/tauri-ui/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  wix-template.wxs
apps/tauri-ui/src-tauri/capabilities/: default.json
apps/tauri-ui/src-tauri/config/: default.toml
apps/tauri-ui/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs
apps/tauri-ui/src-tauri/src/commands/: mod.rs  monitoring.rs  policy.rs  tenant.rs
apps/tauri-ui/src/components/: AuditLogDetailsModal.tsx  AuditLogViewer.tsx  CompilationStatusBar.tsx  DecisionEventCard.tsx  DecisionStreamFeed.tsx  DeploymentDialog.tsx  PolicyDiffViewer.tsx  PolicyEditor.tsx  PolicyMetadataForm.tsx  PolicyTemplateSelector.tsx  PolicyVersionHistory.tsx  PolicyViolationMonitor.tsx  QuotaGauges.tsx  QuotaProgressBar.tsx  QuotaWarningMonitor.tsx  TenantConfigForm.tsx  TestSimulator.tsx  UpdateChecker.tsx
apps/tauri-ui/src/hooks/: useDecisionStream.ts  useNotifications.ts  usePolicyCompilation.ts  usePolicyDeployment.ts
apps/tauri-ui/src/lib/: api.ts
apps/tauri-ui/src/pages/: GlobalMonitoringPage.tsx  MonitoringDashboardPage.tsx  PolicyBuilderPage.tsx  TenantCreatePage.tsx  TenantEditPage.tsx  TenantListPage.tsx
apps/tauri-ui/src/styles/: monitoring.css  policy-builder.css
apps/tauri-ui/src/types/: abac.ts  monitoring.ts  policy.ts  tenant.ts
apps/tauri-ui/src/utils/: date-helpers.ts  (+3 more)
benches/: end_to_end_latency.rs  policy_latency.rs
docs/: PROMOTION_PLAN.md  api-reference.md  audit-and-quota.md  deployment.md  getting-started.md  installation.md  monitoring-dashboard.md  policy-builder-ui.md  policy-dsl-reference.md  presentation-guide.md  rego-bundles.md  tauri-ui.md  testing-guide.md
docs/openapi/: audit-store.yaml  enforcer.yaml  quota-tracker.yaml
examples/: README.md
examples/policies/: apac-logistics-policy.dsl  combined-production-policy.dsl  eu-manufacturing-policy.dsl  us-retail-policy.dsl
examples/tenants/: tenant-apac-logistics.json  tenant-eu-manufacturing.json  tenant-us-retail.json
infra/docker/: .env.example  Dockerfile.audit-store  Dockerfile.bridge-mqtt  Dockerfile.enforcer  Dockerfile.proxy-http  Dockerfile.quota-tracker  README.md  docker-compose.dev.yml  docker-compose.yml
infra/scripts/: post-install.sh  post-remove.sh  pre-remove.sh
infra/systemd/: edge-policy-audit-store.service  edge-policy-bridge-mqtt.service  edge-policy-enforcer.service  edge-policy-hub.target  edge-policy-proxy-http.service  edge-policy-quota-tracker.service  install-services.sh  uninstall-services.sh
infra/windows/: edge-policy-hub-launcher.ps1  edge-policy-hub-service.xml  install.ps1  uninstall.ps1
libs/policy-dsl/: Cargo.toml
libs/policy-dsl/examples/: compile_example.rs  cost_guardrail.dsl  data_residency.dsl  multi_tenant_separation.dsl
libs/policy-dsl/src/: ast.rs  bundle.rs  codegen.rs  lib.rs  parser.rs  validator.rs
libs/policy-dsl/tests/: codegen_tests.rs  integration_tests.rs  parser_tests.rs  validator_tests.rs
libs/rego-bundles/: Cargo.toml  Makefile  README.md
libs/rego-bundles/examples/: using_helpers.rego
libs/rego-bundles/src/: lib.rs
scripts/: build-installers.sh  generate-signing-keys.sh
services/audit-store/: .env.example  Cargo.toml  README.md
services/audit-store/src/: config.rs  main.rs
services/audit-store/src/api/: handlers.rs  mod.rs  router.rs  types.rs
services/audit-store/src/signing/: error.rs  mod.rs  signer.rs
services/audit-store/src/storage/: database.rs  error.rs  mod.rs  policy_bundles.rs  schema.rs  tenant_registry.rs
services/audit-store/src/upload/: error.rs  mod.rs  queue.rs
services/bridge-mqtt/: .env.example  Cargo.toml  README.md
services/bridge-mqtt/src/: broker.rs  config.rs  lib.rs  main.rs
services/bridge-mqtt/src/auth/: context.rs  error.rs  extractor.rs  mod.rs
services/bridge-mqtt/src/hooks/: handler.rs  mod.rs  session.rs
services/bridge-mqtt/src/policy/: client.rs  error.rs  input.rs  mod.rs
services/bridge-mqtt/src/quota/: error.rs  mod.rs  tracker.rs
services/bridge-mqtt/src/transform/: error.rs  mod.rs  transformer.rs
services/bridge-mqtt/tests/: integration_test.rs
services/enforcer/: Cargo.toml  README.md
services/enforcer/src/: config.rs  lib.rs  main.rs
services/enforcer/src/api/: handlers.rs  mod.rs  types.rs  websocket.rs
services/enforcer/src/policy/: engine.rs  loader.rs  manager.rs  mod.rs
services/enforcer/src/tenant/: mod.rs  validator.rs
services/enforcer/tests/: integration_test.rs
services/proxy-http/: .env.example  Cargo.toml  DEPLOYMENT.md  README.md  docker-compose.envoy.yml  docker-compose.nginx.yml  envoy.yaml  nginx.conf  opa-config.yaml
services/proxy-http/policies/: authz.rego
services/proxy-http/src/: config.rs  lib.rs  main.rs  server.rs
services/proxy-http/src/auth/: context.rs  error.rs  extractor.rs  mod.rs
services/proxy-http/src/auth/fixtures/: test-rsa-private.pem  test-rsa-public.pem
services/proxy-http/src/policy/: client.rs  error.rs  input.rs  mod.rs
services/proxy-http/src/proxy/: error.rs  handler.rs  mod.rs  upstream.rs
services/proxy-http/src/quota/: client.rs  mod.rs
services/proxy-http/src/redaction/: engine.rs  error.rs  mod.rs
services/proxy-http/tests/: integration_test.rs
services/quota-tracker/: .env.example  Cargo.toml  README.md
services/quota-tracker/src/: config.rs  main.rs
services/quota-tracker/src/api/: handlers.rs  mod.rs  router.rs  types.rs
services/quota-tracker/src/storage/: database.rs  error.rs  mod.rs  schema.rs
services/quota-tracker/src/tracker/: error.rs  manager.rs  metrics.rs  mod.rs
src/: bench_support.rs  lib.rs
tests/: e2e.rs
tests/e2e/: harness.rs  http_proxy_tests.rs  mod.rs  mqtt_bridge_tests.rs  multi_tenant_isolation_tests.rs  offline_first_tests.rs  ui_workflow_tests.rs
(+17 files in other folders)
