[package]
name = "edge-policy-dsl"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
