[package]
name = "edge-policy-bridge-mqtt"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_policy_bridge_mqtt"
path = "src/lib.rs"

[dependencies]
reqwest = { workspace = true }
rmqtt = "0.17"
rmqtt-plugins = { version = "0.17", features = ["full"] }
bytes = "1"
rustls = "0.23"
x509-parser = "0.16"
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = "0.1"
