[package]
name = "edge-policy-quota-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
