[package]
name = "edge-policy-tauri-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_policy_tauri_ui"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "edge-policy-tauri-ui"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-http = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-updater = "2.0"
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
edge-policy-dsl = { path = "../../../libs/policy-dsl" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
